src/objects/dwp_kitv__Visit_Management_Team__c.object
<CustomObject>
    <description>Object to relate users with visits</description>
    <fields>
        <fullName>MX_HP_Cargo__c</fullName>
        <description>Indica el cargo que tiene el usuario que genero la visita</description>
        <formula>dwp_kitv__user_id__r.Title</formula>
        <label>Cargo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dwp_kitv__Send_minutes__c</fullName>
        <description>Field to know if the minutes were sent and how</description>
        <inlineHelpText>Selecciona para enviar minuta</inlineHelpText>
        <label>Send minutes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Do not send</fullName>
                </value>
                <value>
                    <fullName>To</fullName>
                </value>
                <value>
                    <fullName>CC</fullName>
                    <default>true</default>
                    <label>CC</label>
                </value>
                <value>
                    <fullName>CCO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dwp_kitv__contact_email_desc__c</fullName>
        <description>User email</description>
        <formula>dwp_kitv__user_id__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dwp_kitv__contact_phone_desc__c</fullName>
        <description>User phone</description>
        <formula>IF(ISBLANK( dwp_kitv__user_id__r.Phone ), dwp_kitv__user_id__r.MobilePhone, dwp_kitv__user_id__r.Phone )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dwp_kitv__user_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User visit</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Visit_Management_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dwp_kitv__visit_id__c</fullName>
        <description>Parent Object</description>
        <label>Visit</label>
        <referenceTo>dwp_kitv__Visit__c</referenceTo>
        <relationshipLabel>Visit Management Teams</relationshipLabel>
        <relationshipName>Visit_Management_Teams</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Visit Management Team</label>
    <nameField>
        <displayFormat>VM-{0000000000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visit Management Teams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>dwp_kitv__Change_user</fullName>
        <active>true</active>
        <description>You cannot change the user.</description>
        <errorConditionFormula>ISCHANGED(  dwp_kitv__user_id__c )</errorConditionFormula>
        <errorMessage>Is not allowed change the user. Please, delete the visit management team.</errorMessage>
    </validationRules>
</CustomObject>